Remove java 1.5 syntax in AppServerJDBCXARecovery.  JBTM-483
git-svn-id: https://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_2_3_GA_CP@24993 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70